--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <header>
         <h1>Legacy High School</h1>
-        <p>Building a Legacy of Excellence</p>
+        <p><i>Building a Legacy of Excellence</i></p>
     </header>
 
     <nav>
