--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <body>
 
     <header>
-        <h1>Legacy High School</h1>
-        <p><i>Building a Legacy of Excellence</i></p>
+        <h1>LEGACY HIGH SCHOOL</h1>
+        <p><i>"We Build For The Future"</i></p>
     </header>
 
     <nav>
